@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed Fl_Choice contrast with light-on-dark settings (STR #2219)
 	- Fixed X server "lock", if a modal dialog window is opened
 	  while a menu is active (STR #1986)
 	- Updated mirror sites in documentation (STR #2220)
